# godotkit

./: .editorconfig  .gitattributes  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml  tests.yml
docs/: getting_started.md  index.md
docs/api_reference/: common.md  feed.md
docs/api_reference/engine/: engine.md  exceptions.md  release_fetcher.md  utils.md  version_parsing.md
docs/api_reference/project/: parse.md  project.md  utils.md
src/godotkit/: __init__.py  common.py  constants.py
src/godotkit/common/: __init__.py  core.py  git.py
src/godotkit/engine/: __init__.py  engine.py  exceptions.py  release_fetcher.py  utils.py  version_parsing.py
src/godotkit/feed/: __init__.py  core.py
src/godotkit/project/: __init__.py  parse.py  project.py  utils.py
tests/: test_godot_version_parsing.py
tests/common/: test_open_directory.py  test_remove_directory.py
tests/engine/: test_release_fetcher.py  test_version_parsing.py
tests/feed/: test_rss_feed_fetcher.py
