[project]
name = "godotkit"
version = "0.1.0"
description = " Python utilities and classes for working with Godot engine releases and projects."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "KROSSEYE", email = "30990184+KROSSEYE@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = ["httpx>=0.25,<1.0.0"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.10,<2.0.0", "ruff>=0.4,<1.0.0"]
