[project]
name = "godotkit"
version = "0.4.2"
description = "Python utilities and classes for working with Godot engine releases and projects."
license = { file = "LICENSE" }
readme = "README.md"
authors = [
    { name = "KROSSEYE", email = "30990184+KROSSEYE@users.noreply.github.com" },
]
requires-python = ">=3.9"
dependencies = ["filelock>=3.19,<4.0.0", "httpx>=0.25,<1.0.0"]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.0,<2.0.0",
    "mkdocs-material>=9.6.0,<10.0.0",
    "mkdocstrings[python]>=0.30.0,<1.0.0",
    "mypy>=1.10,<2.0.0",
    "prek>=0.2.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15,<4.0",
    "python-semantic-release>=10.0.0,<11.0.0",
    "ruff>=0.4,<1.0.0",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
tag_format = "v{version}"
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.branches.main]
match = "(main|master)"

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"
mask_initial_release = true

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
